syntax = "proto3";

package grpc.websocket;
option csharp_namespace = "gRPCWebSocket";
option java_multiple_files = true;

message Connection{ //Muligvis ikke n√∏dvendig (10-05-2023)
  string url = 1;
  string ip = 2;
}

message ConnectionResponse{
  string response = 1;
}

message NewConfig{
  int32 temp = 1;
  int32 humid = 2;
  int32 ox = 3;
}

message ConfigResponse{
  string response = 1;
}

message Update{
  int32 temp = 1;
  int32 humid = 2;
  int32 ox = 3;
}

message UpdateResponse{
  string response = 1;
}


service ProtoService{
  rpc getConnection(Connection) returns (ConnectionResponse);
  rpc setConfig(NewConfig) returns (NewConfig);
  rpc checkStatus(Update) returns (UpdateResponse);
}
